# matteria-track

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  audit.toml  check.md  config.toml.example  dist-workspace.toml  prism.fish  validation_log.md
.github/workflows/: ci.yml  release.yml  security-audit.yml
completions/: _materiatrack  materiatrack.bash  materiatrack.fish
docs/: ACHIEVEMENTS.md  CALENDAR-INSTALLATION.md  CONFIGURATION.md  CONTRIBUTING.md  INSTALL.md  INTEGRATIONS.md  README.md  THEMES.md  USER_GUIDE.md  calendar-tui.md
man/: materiatrack.1
packaging/: .SRCINFO  PKGBUILD  materiatrack.rb  materiatrack.spec
scripts/: calendar-helper.sh  dwm-statusbar.sh
src/: achievements.rs  cli.rs  config.rs  database.rs  error.rs  fuzzy.rs  lib.rs  main.rs  models.rs  notifications.rs  stats.rs  theme.rs  tracking.rs  ui.rs
src/calendar/: events.rs  mod.rs  model.rs  tui.rs
src/integrations/: dwm.rs  git.rs  mod.rs  obsidian.rs  zeit.rs
src/security/: audit.rs  encryption.rs  export.rs  mod.rs
src/themes/: materia.rs  mod.rs
tests/: integration_tests.rs
