[package]
name = "materiatrack"
version = "1.0.4"
edition = "2021"
rust-version = "1.70"
authors = ["ind4skylivey"]
description = "Mystical Final Fantasy-themed CLI time tracker for power users"
license = "MIT"
repository = "https://github.com/ind4skylivey/matteria-track"
homepage = "https://github.com/ind4skylivey/matteria-track"
documentation = "https://docs.rs/materiatrack"
readme = "README.md"
keywords = ["time-tracking", "cli", "productivity", "terminal", "rust"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/*",
    "target/*",
    "release/*",
    "*.db",
    "*.log",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.28", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4", features = ["derive", "color", "wrap_help"] }
clap_complete = "4.5"
ratatui = "0.22"
crossterm = "0.26"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
git2 = { version = "0.18", features = ["vendored-libgit2", "vendored-openssl", "zlib-ng-compat"] }
dirs = "5.0"
thiserror = "1.0"
regex = "1.10"
sha2 = "0.10"
zip = "2.2"
tempfile = "3.10"
fuzzy-matcher = "0.3"
lazy_static = "1.5"

[features]
default = []

[profile.release]
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
