[package]
name = "materiatrack"
version = "1.0.6"
edition = "2021"
rust-version = "1.70"
authors = ["ind4skylivey"]
description = "Mystical Final Fantasy-themed CLI time tracker for power users"
license = "MIT"
repository = "https://github.com/ind4skylivey/matteria-track"
homepage = "https://github.com/ind4skylivey/matteria-track"
documentation = "https://docs.rs/materiatrack"
readme = "README.md"
keywords = ["time-tracking", "cli", "productivity", "terminal", "rust"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/*",
    "target/*",
    "release/*",
    "*.db",
    "*.log",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.28", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4", features = ["derive", "color", "wrap_help"] }
clap_complete = "4.5"
ratatui = "0.28"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
git2 = { version = "0.18", features = ["vendored-libgit2", "vendored-openssl", "zlib-ng-compat"] }
dirs = "5.0"
thiserror = "1.0"
regex = "1.10"
sha2 = "0.10"
zip = "2.2"
tempfile = "3.10"
fuzzy-matcher = "0.3"
lazy_static = "1.5"
uuid = { version = "1.11", features = ["v4", "serde"] }
num-traits = "0.2"

[features]
default = []

[profile.release]
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[package.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
